2002-12-24  Murray Cumming  <murrayc@usa.net>

	* moduleinfo.py (gnome22): Replaced the gnome22 gnome-meta-desktop
	metamodule with one that includes the new modules such as acme, 
	file-roller, gstreamer, and nautilus-media.

2002-12-24  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome22.fcpackage): add fcpackage to gnome22
	module set.
	(gnome22.pango): depend on fcpackage.

	* module.py (FcPackage): add a special Package subclass for
	building fcpackage.

	* jhbuild.py (do_build): change the code that removes entries from
	the module list so that it doesn't cause an exception if you
	specify a module name that won't be built.

2002-12-23  James Henstridge  <james@daa.com.au>

	* bootstrap.py (bootstraps): add my libtool -export-dynamic patch.

2002-12-23    <chema@celorio.com>

	* moduleinfo.py (gnome22): add intltool dependency to
	libgnomeprint

2002-12-22  Murray Cumming  <murrayc@usa.net>

	* moduleinfo.py (gnome22): Made gnome-desktop dependent on 
	gnome-themes because it is part of the Desktop release.

2002-12-22  Murray CUmming  <murrayc@usa.net>

	* moduleinfo.py (gnome22): Added gnome-themes module, because
	the Theme control panel complains at runtime about it not being 
	installed.

2002-12-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* moduleinfo.py (gnome20): Add accessibility modules at-spi,
	libgail-gnome, at-poke, gnome-mag, gok, gnome-speech, gnopernicus,
	plus the MetaModule meta-gnome-accessibility.
	(gnome22): Override modules at-spi, libgail-gnome, gnome-mag to
	check out the HEAD branch.

2002-12-19  Biswapesh Chattopadhyay <biswapesh_chatterjee@tcscal.co.in>
	* jhbuild.py: Move True/False definitions up - fixes undefined
	errors for Python version < 2.2.1

2002-12-19  Murray Cumming  <murrayc@usa.net>

	* moduleinfo.py: Commented out the metatheme module because the
	release team think it probably isn't useful anymore, and because its
	Desktop Theme capplet is confusingly similar to the new 2.2 Theme 
	capplet.
