@@ -1,3 +1,9 @@
+2003-01-03  Paolo Maggi  <maggi@athena.polito.it>
+
+	* moduleinfo.py (gnome20.gedit): get gnome-2-0 branch. Added 
+	gedit to meta-gnome-desktop
+	(gnome22): added gedit module. Added gedit to meta-gnome-desktop
+
 2002-12-24  Murray Cumming  <murrayc@usa.net>
 
 	* moduleinfo.py (gnome22): Replaced the gnome22 gnome-meta-desktop
